Adding first script

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       <li>Staffing Account Manager</li>
     </ol>
     <a href="https://www.linkedin.com/in/rogersty">My Linkedin Page</a>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
