Final product - Website Tutorial - JS,HTML,CSS

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li>Staffing Account Manager</li>
     </ol>
     <a href="https://www.linkedin.com/in/rogersty">My Linkedin Page</a>
-    <script src="scripts/main.js"></script>
+    <button>Change User</button>
+    <script src="scripts/main.js"> </script>
   </body>
 </html>
